<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".TicTacHome">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tic Tac Toe Game!"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"/>

    <TableLayout
        android:id="@+id/playArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/one"
                android:background="@drawable/btn_bg"
                android:layout_margin="5dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/two"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textSize="70dp" />


            <Button
                android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/three"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textSize="70dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/four"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/four"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textSize="70dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/five"
                android:background="@drawable/btn_bg"
                android:textSize="70dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/six"
                android:textSize="70dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/seven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/seven"
                android:background="@drawable/btn_bg"
                android:textSize="70dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/eight"
                android:textSize="70dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/nine"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textSize="70dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textSize="25dp" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/human" />

            <TextView
                android:id="@+id/humanCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/ties" />

            <TextView
                android:id="@+id/tiesCount"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/android" />

            <TextView
                android:id="@+id/androidCount"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Restart"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/reset"
        android:id="@+id/restart"
        android:onClick="onBtnClicked"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
